static/css/styles.css
/* ... */
.report-graphic .secondary-icon,
.default-report::before {
  position: absolute;
  top: 10px;
  left: 10px;
  font: bold 120px/1 monospace;
  color: rgba(0, 0, 0, 0.1);
}

.report-graphic .primary-icon,
.default-report::after {
  position: absolute;
  bottom: 10px;
  right: 10px;
  font: bold 120px/1 monospace;
}

.default-report::after {
  content: '</>';
}

.alert {
  position: fixed;
  top: 5px;
  left: 50%;
  transform: translateX(-50%);
  width: 95%;
  z-index: 1;
}

.alert strong a {
  border-bottom: 1px dashed #000;
  border-color: inherit;
}

.alert strong a:hover,
.alert strong a:focus {
  text-decoration: none;
  border-bottom-style: solid;
}

.help-tooltip {
  opacity: 0.7;
  transition: all 0.2s;
}

.help-tooltip:hover {
  opacity: 1;
}

@media (max-width: 992px) {
  footer {
    text-align: center;
  }

  footer nav {
    display: inline-block;
    float: none;
    margin-bottom: -20px;
  }

  footer [class*="col"] {
    margin: 10px auto;
  }

  header nav > a:not(:last-child),
  footer nav > a:not(:last-child) {
    margin-right: 4px;
  }
}

@media (max-width: 767px) {
  h2 {
    font-size: 2em;
  }

  section {
    text-align: center;
  }

  section * {
    text-align: inherit;
  }

  section [class*="btn"] {
    display: block;
    margin: 15px auto !important;
    max-width: 85%;
    padding: 10px 15px;
    width: 100%;
  }

  .row > .container > [class*="col"]:not(:last-of-type) {
    margin-bottom: 60px;
  }

  h2 select {
    display: block;
    margin: 0 auto 30px !important;
    max-width: 85%;
    padding: 10px 15px;
    width: 100%;
  }

  section .btn-group {
    max-width: 100%;
    margin: 0 !important;
    padding: 0;
  }

  .btn-group .btn {
    display: inline-block;
    width: 50%;
  }
}

#sponsor-logos {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  background-color: #fff;
  border: 1px solid #667a7d;
  border-radius: 15px;
  margin-bottom: 40px;
  padding: 40px;
}

#sponsor-logos * {
  padding: 5px;
}

#sponsor-logos img {
  max-height: 115px;
  max-width: 250px;
  height: auto;
  width: auto;
}

#FAQ h1 {
  margin-bottom: 20px;
  font-size: 2.7em;
}

#FAQ h2 {
  font-size: 24px;
}

#FAQ h2 + p {
  padding: 0;
}

#FAQ li {
  list-style: inside disc;
  margin-bottom: 1em;
}

#FAQ p,
#FAQ dd {
  margin-bottom: 30px;
}

#answers h2 {
  margin-top: 100px;
}

#answers h2:first-child {
  margin-top: 0;
}

